--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,5 @@ project(PROJET_IOC)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-add_executable(testStableSolver "test/testStableSolver.cpp" "src/stableSolver.cpp" "src/graph2.cpp" "src/graphNO.cpp")
+add_executable(testStableSolver "test/testStableSolver.cpp" "src/weightedMaximumStableSolver.cpp" "src/stableSolver.cpp" "src/graph2.cpp" "src/graphNO.cpp")
 target_include_directories(testStableSolver PRIVATE "src")
-
-
